# pmgo

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HEARTBEAT.md  LICENSE  NOTICE  README.md  README.zh-CN.md  README.zh-TW.md  SECURITY.md  package.json  pyproject.toml
agent/: AGENTS.md  IDENTITY.md  README.md  SOUL.md  TOOLS.md  USER.md
cron/: jobs.yaml
docs/: ARCHITECTURE.md  DEPLOY.md  FIRST_DAILY_REPORT.md  LIVE_CANVAS.md  PUBLISHING.md  ROADMAP.md
locales/: en.json  zh-CN.json  zh-TW.json
memory/: schema.sql
openclaw/: README.md  gtd-quickstart.md
policy/: pmgo.policy.yaml
runtimes/: README.md
scripts/: canvas-data.py  check-memory-assets.py  daily-standup.py  dingtalk-issues.py  feishu-issues.py  github-issues.py  gtd-bootstrap.py  init-memory-db.py  init-memory-project.py  jira-issues.py  linear-issues.py  migrate-memory-db.py  notion-issues.py  pmgo_common.py  pmgo_http.py  pmgo_log.py  pmgo_mcp_preflight.py  pmgo_mcp_server.py  pmgo_policy.py  project-core.py  render-cron-jobs.py  render-runtime-config.py  risk-radar.py  scaffold-memory.py  validate-agent-i18n.js  verify-memory-db.py  weekly-report.py
shared/: cron-messages.md  mcp.env.example
skills/: README.md
tests/: README.md  test_canvas_data.py  test_dingtalk_api.py  test_feishu_api.py  test_github_api_pagination.py  test_github_sync.py  test_helpers.py  test_jira_transition.py  test_linear_comment.py  test_notion_api.py  test_pmgo_common.py  test_pmgo_http.py  test_pmgo_mcp_tools.py  test_pmgo_policy.py  test_project_core_store.py  test_render_cron_jobs.py  (+5 more)
(+94 files in other folders)
